themes/smol-cat/static/css/style.css
h1 { font-size: 3rem }
h2 { font-size: 2.5rem }
article h1 { font-size: 2rem }
article h2 { font-size: 1.5rem }
aside h1 { font-size: 2.5rem }

.post h1 { font-size: 1.5rem}
.post h2 { font-size: 1.25rem}

html {overflow-y: scroll; }
:root {
    --ctp-latte-rosewater: #dc8a78;
    --ctp-latte-flamingo: #dd7878;
    --ctp-latte-pink: #ea76cb;
    --ctp-latte-mauve: #8839ef;
    --ctp-latte-red: #d20f39;
    --ctp-latte-maroon: #e64553;
    --ctp-latte-peach: #fe640b;
    --ctp-latte-yellow: #df8e1d;
    --ctp-latte-green: #40a02b;
    --ctp-latte-teal: #179299;
    --ctp-latte-sky: #04a5e5;
    --ctp-latte-sapphire: #209fb5;
    --ctp-latte-blue: #1e66f5;
    --ctp-latte-lavender: #7287fd;
    --ctp-latte-text: #4c4f69;
    --ctp-latte-subtext1: #5c5f77;
    --ctp-latte-subtext0: #6c6f85;
    --ctp-latte-overlay2: #7c7f93;
    --ctp-latte-overlay1: #8c8fa1;
    --ctp-latte-overlay0: #9ca0b0;
    --ctp-latte-surface2: #acb0be;
    --ctp-latte-surface1: #bcc0cc;
    --ctp-latte-surface0: #ccd0da;
    --ctp-latte-base: #eff1f5;
    --ctp-latte-mantle: #e6e9ef;
    --ctp-latte-crust: #dce0e8;
}
:root {
    --ctp-macchiato-rosewater: #f4dbd6;
    --ctp-macchiato-flamingo: #f0c6c6;
    --ctp-macchiato-pink: #f5bde6;
    --ctp-macchiato-mauve: #c6a0f6;
    --ctp-macchiato-red: #ed8796;
    --ctp-macchiato-maroon: #ee99a0;
    --ctp-macchiato-peach: #f5a97f;
    --ctp-macchiato-yellow: #eed49f;
    --ctp-macchiato-green: #a6da95;
    --ctp-macchiato-teal: #8bd5ca;
    --ctp-macchiato-sky: #91d7e3;
    --ctp-macchiato-sapphire: #7dc4e4;
    --ctp-macchiato-blue: #8aadf4;
    --ctp-macchiato-lavender: #b7bdf8;
    --ctp-macchiato-text: #cad3f5;
    --ctp-macchiato-subtext1: #b8c0e0;
    --ctp-macchiato-subtext0: #a5adcb;
    --ctp-macchiato-overlay2: #939ab7;
    --ctp-macchiato-overlay1: #8087a2;
    --ctp-macchiato-overlay0: #6e738d;
    --ctp-macchiato-surface2: #5b6078;
    --ctp-macchiato-surface1: #494d64;
    --ctp-macchiato-surface0: #363a4f;
    --ctp-macchiato-base: #24273a;
    --ctp-macchiato-mantle: #1e2030;
    --ctp-macchiato-crust: #181926;
}
:root {
    --ctp-mocha-rosewater: #f5e0dc;
    --ctp-mocha-flamingo: #f2cdcd;
    --ctp-mocha-pink: #f5c2e7;
    --ctp-mocha-mauve: #cba6f7;
    --ctp-mocha-red: #f38ba8;
    --ctp-mocha-maroon: #eba0ac;
    --ctp-mocha-peach: #fab387;
    --ctp-mocha-yellow: #f9e2af;
    --ctp-mocha-green: #a6e3a1;
    --ctp-mocha-teal: #94e2d5;
    --ctp-mocha-sky: #89dceb;
    --ctp-mocha-sapphire: #74c7ec;
    --ctp-mocha-blue: #89b4fa;
    --ctp-mocha-lavender: #b4befe;
    --ctp-mocha-text: #cdd6f4;
    --ctp-mocha-subtext1: #bac2de;
    --ctp-mocha-subtext0: #a6adc8;
    --ctp-mocha-overlay2: #9399b2;
    --ctp-mocha-overlay1: #7f849c;
    --ctp-mocha-overlay0: #6c7086;
    --ctp-mocha-surface2: #585b70;
    --ctp-mocha-surface1: #45475a;
    --ctp-mocha-surface0: #313244;
    --ctp-mocha-base: #1e1e2e;
    --ctp-mocha-mantle: #181825;
    --ctp-mocha-crust: #11111b;
}
:root { 
    --bgcolor: var(--ctp-latte-base); 
    --fontcolor: var(--ctp-latte-text);
    --linkcolor: var(--ctp-latte-mauve); 
    --decoration-color: var(--ctp-latte-peach);
    --article-bg: var(--ctp-latte-mantle);
    --selection-color: var(--ctp-latte-blue);
}
@media (prefers-color-scheme: dark) { 
    :root { 
        --bgcolor: var(--ctp-mocha-base); 
        --fontcolor: var(--ctp-mocha-text);
        --linkcolor: var(--ctp-mocha-blue);
        --decoration-color: var(--ctp-mocha-red);
        --article-bg: var(--ctp-mocha-mantle);
        --selection-color: var(--ctp-mocha-blue);
    }
}
body{
    max-width:800px;
    margin:40px auto;
    padding:0 10px;
    font:1rem/1.5 monospace;
    color:var(--fontcolor);
    background: var(--bgcolor)
}
pre{
    padding: 12px;
    overflow-x: auto;
}
article{background: var(--article-bg);
    padding:12px 24px;
    margin: 12px auto;
}
.center {display: block;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
}
figcaption {color: #888;
    font: 0.85rem/1.5 monospace;
    text-align: center;
}
figure {margin: auto}
img {
    display: block;
    max-width: 100%;
    height: auto;
    margin: auto
}
a {
    text-decoration-color: var(--decoration-color);
    text-decoration-thickness: 2px;
    text-underline-offset: 2px;
    text-decoration-line: underline;
    font-weight: bold;
}
a:hover{
    text-decoration-thickness: 3px;
}
a:link{color: var(--linkcolor)}
a:visited{color: var(--linkcolor)}
blockquote{
  border: 2px solid var(--decoration-color);
  padding: 2px 0 2px 20px;
  margin: 0;
  font-style: italic;
}
hr{
  border: 0;
  height: 1px;
  background-color: var(--decoration-color);
}
p > code, li > code {
    background: var(--bgcolor);
    font-weight: bold;
    padding: 5px;
}

::selection {
    background-color: color-mix(in srgb, var(--selection-color), transparent 70%);
}

.footnotes, footer {
    font-size: 0.75rem;
}

.footnote-ref {
    padding-left: 0.25ch;
}

#TableOfContents {
    padding: 6px 12px;
}

.header-anchor {
    padding-left: 0.25ch;
}

